<resources>
    <string name="app_name">NetWork</string>
    <string name="posts">Посты</string>
    <string name="main">Главная</string>
    <string name="events">События</string>
    <string name="contacts">Контакты</string>
    <string name="profile">Профиль</string>
    <string name="empty_posts">Постов нет</string>
    <string name="add_post">Добавить пост</string>
    <string name="avatar_user">Аватар юзера</string>
    <string name="user_name">Имя пользователя</string>
    <string name="mention">Упоминания</string>
    <string name="menu">Меню</string>
    <string name="sample_published_date">Дата публикации</string>
    <string name="placeWork">Место работы</string>
    <string name="image_full_screen">развернуть</string>
    <string name="video">Видео</string>
    <string name="like">Нравиться</string>
    <string name="users">Пользователи</string>
    <string name="mentions">Упоминания</string>
    <string name="coordinates">Координаты месторасположения</string>
    <string name="share">Поделиться</string>
    <string name="main_menu_posts">Посты</string>
    <string name="main_menu_jobs">работа</string>
    <string name="main_menu_sign_out">Выход</string>
    <string name="ok">ок</string>
    <string name="menu_save">Сохранить</string>
    <string name="menu_edit">Изменить</string>
    <string name="menu_remove">Удалить</string>
    <string name="description_post_menu">Меню поста</string>
    <string name="button">Кнопка</string>
    <string name="event_speakers">Докладчики</string>
    <string name="event_participants">Участники</string>
    <string name="description_post_like">Лайк</string>
    <string name="post_mentions">Упомянули</string>
    <string name="header_events">Мероприятия</string>
    <string name="empty_events">Меропрития отсутствуют</string>
    <string name="header_jobs">Место работы</string>
    <string name="empty_jobs">Укажите место вашей работы</string>
    <string name="login_register">Регистрация</string>
    <string name="login_login">Логин</string>
    <string name="login_password">Пароль</string>
    <string name="login_name">Имя</string>
    <string name="action_sign_in">Войти или зарегаться</string>
    <string name="latitude">Широта</string>
    <string name="longitude">Долгота\n</string>
    <string name="new_post_content">Содержание</string>
    <string name="new_post_link">ССылочка\n</string>
    <string name="new_post_coords">Местоположение</string>
    <string name="remove">Удалить</string>
    <string name="description_select_photo">Фото</string>
    <string name="description_take_photo">Сфотографировать</string>
    <string name="new_job_start">Дата начала</string>
    <string name="new_job_changeDate">Изменить дату</string>
    <string name="new_job_finish">Дата окончания</string>
    <string name="new_job_name">Работа</string>
    <string name="new_job_position">Местоположение</string>
    <string name="new_event_datetime">Дата и время мероприятия</string>
    <string name="new_event_change_datetime">Изменить дату</string>
    <string name="new_post_online">Онлайн</string>
    <string name="new_post_offline">Офлайн</string>
    <string name="header_posts">Посты</string>
    <string name="error_load">Не удалось загрузить данные</string>
    <string name="retry">Повторить</string>
    <string name="button_part">Учавствую</string>
    <string name="button_part2">Участвовать</string>
    <string name="retry_loading">Повторить</string>
    <string name="participate">Учавствовать</string>
    <string name="hi">Добро пожаловать</string>
    <string name="new_event_empty_content">Вам необходимо заполнить содержимое события</string>
    <string name="new_job_empty_name">необходимо заполнить название организаци</string>
    <string name="new_job_empty_position">необходимо заполнить должность</string>
    <string name="new_post_empty_content">Заполните содержимое поста</string>
    <string name="error_loading">Не удалось загрузить данные</string>
    <string name="authorization_error">Ошибка при авторизации</string>
</resources>