<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.activity.NewEventFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/common_spacing"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/text_startDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_job_start" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editStartDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:inputType="date" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_changeStartDate"
                android:layout_marginStart="@dimen/common_spacing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/new_job_changeDate" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_FinishDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_job_finish" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editFinishDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:inputType="date" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_changeFinishDate"
                android:layout_width="wrap_content"
                android:layout_marginStart="@dimen/common_spacing"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/new_job_changeDate" />
        </LinearLayout>


        <TextView
            android:id="@+id/text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_job_name" />

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:inputType="textMultiLine"
            android:padding="@dimen/common_spacing" />

        <TextView
            android:id="@+id/text_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_job_position" />

        <EditText
            android:id="@+id/edit_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:inputType="textMultiLine"
            android:padding="@dimen/common_spacing" />

        <TextView
            android:id="@+id/text_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_post_link" />

        <EditText
            android:id="@+id/edit_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:inputType="textMultiLine"
            android:padding="@dimen/common_spacing" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>