<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="NewEventFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/common_spacing">

            <TextView
                android:id="@+id/text_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_post_content" />

            <EditText
                android:id="@+id/edit_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="textMultiLine"
                android:padding="@dimen/common_spacing" />

            <TextView
                android:id="@+id/text_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_post_link" />

            <EditText
                android:id="@+id/edit_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="textMultiLine"
                android:padding="@dimen/common_spacing" />

            <TextView
                android:id="@+id/text_mentions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/post_mentions" />

            <EditText
                android:id="@+id/edit_mentions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="textMultiLine"
                android:padding="@dimen/common_spacing" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_location_on"
                    style="@style/Widget.AppTheme.LikeCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="false"
                    app:icon="@drawable/coordinat"
                    app:layout_constraintEnd_toEndOf="parent">
                </com.google.android.material.button.MaterialButton>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_location_off"
                    style="@style/Widget.AppTheme.LikeCheckBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checkable="false"
                    app:icon="@drawable/coordinat_off"
                    app:layout_constraintEnd_toEndOf="parent">
                </com.google.android.material.button.MaterialButton>

                <TextView
                    android:id="@+id/text_coord"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_post_coords" />

                <TextView
                    android:id="@+id/text_coord_lat"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="@dimen/common_spacing"
                    android:ellipsize="end"
                    android:layout_height="wrap_content"
                     />

                <TextView
                    android:id="@+id/text_coord_long"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="@dimen/common_spacing"
                    android:ellipsize="end"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>

            <FrameLayout
                android:id="@+id/AttachmentContainer"
                android:layout_marginTop="@dimen/common_spacing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/Attachment_Image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_horizontal"
                    app:layout_constraintBottom_toTopOf="@id/Attachment_Video"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:srcCompat="@tools:sample/avatars" />



                <com.google.android.material.button.MaterialButton
                    android:id="@+id/removePhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/remove" />
            </FrameLayout>
        </LinearLayout>
    </ScrollView>

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:background="@color/divider_color"
        app:layout_constraintBottom_toTopOf="@id/buttonPanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/buttonPanel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/pickPhoto"
            style="@style/Widget.AppTheme.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_select_photo"
            android:padding="@dimen/common_spacing"
            app:icon="@drawable/photo" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/takePhoto"
            style="@style/Widget.AppTheme.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_take_photo"
            android:padding="@dimen/common_spacing"
            app:icon="@drawable/camera" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>